[gd_scene load_steps=13 format=2]

[ext_resource path="res://Multimedia/Personajes/LouMontulli.png" type="Texture" id=1]
[ext_resource path="res://Scripts/NPCss/MovimeintoNPCnuevo.gd" type="Script" id=2]
[ext_resource path="res://Escenas/Animaciones/IconoDialogo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/DialogosNPCs/LouMontulli.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 12 )

[sub_resource type="CircleShape2D" id=7]
radius = 8.75

[sub_resource type="Animation" id=5]
resource_name = "Derecha"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Espalda"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Frente"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Izquierda"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.3125
height = 7.5

[node name="LouMontulli" type="Node2D"]
position = Vector2( 552, 283 )
scale = Vector2( 3.2, 3.2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 16
collision_mask = 16
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="KinematicBody2D" instance=ExtResource( 3 )]
position = Vector2( 0.666672, -9.66666 )
scale = Vector2( 0.554924, 0.58144 )
frame = 0

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( -0.3125, 5 )
scale = Vector2( 0.739584, 0.729167 )
texture = ExtResource( 1 )
hframes = 4
vframes = 4
frame = 4
region_rect = Rect2( 288.635, 8.69159, 15.1515, 21.8115 )

[node name="Lou" type="Area2D" parent="KinematicBody2D" groups=["npc", "objeto"]]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Lou"]
position = Vector2( 0, 4 )
shape = SubResource( 6 )

[node name="Detencion" type="Area2D" parent="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Detencion"]
position = Vector2( -0.3125, 2.8125 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D"]
root_node = NodePath("../..")
anims/Derecha = SubResource( 5 )
anims/Espalda = SubResource( 1 )
anims/Frente = SubResource( 2 )
anims/Izquierda = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="izq" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( -2.99998, 14 )
enabled = true
cast_to = Vector2( -12, 0 )
collision_mask = 16

[node name="der" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 3, 14 )
enabled = true
cast_to = Vector2( 12, 0 )
collision_mask = 16

[node name="arriba" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 0, 12 )
enabled = true
cast_to = Vector2( 0, -5.33334 )
collision_mask = 16

[node name="abajo" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 0, 16 )
enabled = true
cast_to = Vector2( 0, 11 )
collision_mask = 16

[node name="Timer" type="Timer" parent="KinematicBody2D"]
wait_time = 2.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, 5 )
shape = SubResource( 8 )

[connection signal="area_entered" from="KinematicBody2D/Lou" to="KinematicBody2D" method="_on_Lou_area_entered"]
[connection signal="timeout" from="KinematicBody2D/Timer" to="KinematicBody2D" method="_on_Timer_timeout"]
