[gd_scene load_steps=13 format=2]

[ext_resource path="res://Multimedia/Personajes/MarcAndreessen.png" type="Texture" id=1]
[ext_resource path="res://Scripts/NPCss/MovimeintoNPCnuevo.gd" type="Script" id=2]
[ext_resource path="res://Escenas/Animaciones/IconoDialogo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/DialogosNPCs/MarcAndreessen.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 12 )

[sub_resource type="CircleShape2D" id=7]
radius = 9.67242

[sub_resource type="Animation" id=5]
resource_name = "Derecha"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Espalda"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Frente"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Izquierda"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 19 ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 4.83334
height = 6.99998

[node name="MarcAndreessen" type="Node2D"]
position = Vector2( 552, 283 )
scale = Vector2( 3, 3 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="KinematicBody2D" instance=ExtResource( 3 )]
position = Vector2( 0, -10.3333 )
scale = Vector2( 0.681818, 0.89394 )
frame = 5

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 1 )
hframes = 24
frame = 19
region_rect = Rect2( 288.635, 8.69159, 15.1515, 21.8115 )

[node name="Marc" type="Area2D" parent="KinematicBody2D" groups=["npc", "objeto"]]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Marc"]
position = Vector2( 0, 4 )
shape = SubResource( 6 )

[node name="Detencion" type="Area2D" parent="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Detencion"]
position = Vector2( 0, 3.66667 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D"]
root_node = NodePath("../..")
anims/Derecha = SubResource( 5 )
anims/Espalda = SubResource( 1 )
anims/Frente = SubResource( 2 )
anims/Izquierda = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="izq" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( -3, 14 )
enabled = true
cast_to = Vector2( -12, 0 )
collision_mask = 16

[node name="der" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 3, 14 )
enabled = true
cast_to = Vector2( 12, 0 )
collision_mask = 16

[node name="arriba" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 0, 13.3333 )
enabled = true
cast_to = Vector2( 0, -3.33334 )
collision_mask = 16

[node name="abajo" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 0, 16 )
enabled = true
cast_to = Vector2( 0, 11 )
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, 5.66666 )
shape = SubResource( 8 )

[node name="Timer" type="Timer" parent="KinematicBody2D"]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="KinematicBody2D/Marc" to="KinematicBody2D" method="_on_Marc_area_entered"]
[connection signal="timeout" from="KinematicBody2D/Timer" to="KinematicBody2D" method="_on_Timer_timeout"]
